[리팩토링] 코드 실행하는 서비스 리팩토링 1. 길었던 명령문 중 반복되는 것은 합치고 나머지는 메서드로 분리