@@ -1,159 +1,31 @@
 package coco.ide.ideapp.files;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.io.*;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
-
-//Todo: 언어 추가 한가득 하기
 public class ExecuteService {
-
-    private final FileRepository fileRepository;
-
-    public String executeCode(String filePath, String language, Long fileId) throws IOException {
-
-        log.info("in executeCode");
-
-        File file = fileRepository.findById(fileId)
-                .orElseThrow(() -> new RuntimeException("존재하지 않는 파일"));
-        int dotIndex = file.getName().lastIndexOf('.');
-
+    public String executeCode(String filePath, String language, String fileName) throws IOException {
         String absolutePath = Paths.get(filePath).toAbsolutePath().toString();
-        log.info("Path = {}", absolutePath);
+        List<String> command = new ArrayList<>(
+                List.of(
+                        "docker", "run", "--rm", "-i",
+                        "-v", absolutePath + ":/user_files",
+                        "-w", "/user_files"
+                )
+        );
 
-        List<String> commandDocker = new ArrayList<>();
-        if (language.equalsIgnoreCase("java")) {
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "openjdk:latest",
-                    "sh", "-c",
-                    "javac " + file.getName() + " && java " + file.getName().substring(0, dotIndex)
-            );
-        } else if (language.equalsIgnoreCase("Python")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "python:latest",
-                    "python", file.getName()
-            );
-        } else if (language.equalsIgnoreCase("javascript")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "node:latest",
-                    "node", file.getName()
-            );
-        } else if (language.equalsIgnoreCase("c")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "gcc:latest",
-                    "sh", "-c", "gcc " + file.getName() + " -o program && ./program && rm program"
-            );
-        } else if (language.equalsIgnoreCase("cpp")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "gcc:latest",
-                    "sh", "-c", "g++ " + file.getName() + " -o program && ./program && rm program"
-            );
-        } else if (language.equalsIgnoreCase("csharp")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "mcr.microsoft.com/dotnet/sdk:latest",
-                    "sh", "-c", "dotnet new console -n Program && mv " + file.getName() + " Program/Program.cs && cd Program && dotnet run && cd .. && rm -rf Program"
-            );
-        }
-        else if (language.equalsIgnoreCase("go")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "golang:latest",
-                    "go", "run", file.getName()
-            );
-        } else if (language.equalsIgnoreCase("rust")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "rust:latest",
-                    "rustc", file.getName(), "-o", "program",
-                    "&&", "./program"
-            );
-        } else if (language.equalsIgnoreCase("dart")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "dart:latest",
-                    "dart", file.getName()
-            );
-        } else if (language.equalsIgnoreCase("typescript")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "node:latest",
-                    "npx", "ts-node", file.getName()
-            );
-        } else if (language.equalsIgnoreCase("kotlin")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "openjdk:latest",
-                    "kotlinc", file.getName(), "-include-runtime", "-d", "program.jar",
-                    "&&", "java", "-jar", "program.jar"
-            );
-        } else if (language.equalsIgnoreCase("swift")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "swift:latest",
-                    "swift", file.getName()
-            );
-        } else if (language.equalsIgnoreCase("ruby")) {
-            log.info("language = {}", language);
-            commandDocker = List.of(
-                    "sudo", "docker", "run", "--rm", "-i",
-                    "-v", absolutePath + ":/user_files",
-                    "-w", "/user_files",
-                    "ruby:latest",
-                    "ruby", file.getName()
-            );
-        }
+        String[] dockerCommands = getDockerCommands(language.toLowerCase(), fileName);
+        command.addAll(Arrays.asList(dockerCommands));
 
-
-        ProcessBuilder processBuilder = new ProcessBuilder(commandDocker);
+        ProcessBuilder processBuilder = new ProcessBuilder(command);
         Process process = processBuilder.start();
 
         StringBuilder output = new StringBuilder();
@@ -182,6 +54,21 @@ public class ExecuteService {
             Thread.currentThread().interrupt();
             throw new RuntimeException("Execution interrupted", e);
         }
+    }
+
+    private String[] getDockerCommands(String language, String fileName) {
+        return switch (language) {
+            case "java" ->
+                    new String[]{"openjdk:latest", "sh", "-c", "javac " + fileName + " && java " + fileName.substring(0, fileName.lastIndexOf('.'))};
+            case "python" -> new String[]{"python:latest", "python", fileName};
+            case "javascript" -> new String[]{"node:latest", "node", fileName};
+            case "c" ->
+                    new String[]{"gcc:latest", "sh", "-c", "gcc " + fileName + " -o program && ./program && rm program"};
+            case "cpp" ->
+                    new String[]{"gcc:latest", "sh", "-c", "g++ " + fileName + " -o program && ./program && rm program"};
+            case "typescript" -> new String[]{"node:latest", "npx", "ts-node", fileName};
+            default -> null;
+        };
     }
 }
 
